--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 PORT=3000
 PG_CONNECTION_STRING=postgresql://neondb_owner:npg_UHbZK7cqzwR5@ep-tight-firefly-a17kvw50-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
+CLOUD_URL=CLOUDINARY_URL=cloudinary://478458736836525:jXihPYcM2Jz28HL9YEaDKGFTNQc@dxjm1mdjc
 
-CLOUD_NAME=dy2eunesz
-CLOUD_API_KEY=217614183576356
-CLOUD_API_SECRET=Qsult5Wt1jkq9oacAvbn_JccRf4
+CLOUD_NAME=dxjm1mdjc
+CLOUD_API_KEY=478458736836525
+CLOUD_API_SECRET=jXihPYcM2Jz28HL9YEaDKGFTNQc
