--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "muster": "^0.9.3",
     "nodemon": "^3.1.10",
     "pg": "^8.15.6",
     "validator": "^13.15.0"
